# siecom

./: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.prod  README.md  conftest.py  docker-compose-prod.yml  docker-compose.prod.yml  docker-compose.yml  main.py  manage.py  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  schema.gql
.github/actions/: setup-pyuv.yml
.github/workflows/: cd.yml  ci.yml  testing.yml  tests.yml
core/: admin.py  tasks.py  views.py
core/graphql/: __init__.py  public_identifier.py
core/migrations/: 0001_created_custom_user_model.py  0001_initial_creation_of_db.py  0002_added_canonical_phone_number.py  0002_added_optimal_indexes_user.py  0003_added_address_model.py  0004_created_category_model.py  0005_created_product_model.py  0006_created_order_model.py  0007_corrected_oicd_requirements.py  0008_better_naming_of_fields.py  0009_removed_phnumber_from_user.py  0010_added_unique_constraint.py  0011_added_unique_constraint_product.py  0012_parent_category_can_be_null.py
core/models/: __init__.py  address.py  category.py  order.py  product.py  user.py
core/services/: __init__.py  (+3 more)
docker/: connect_to_db.sh  entrypoint.sh  start.sh
docs/: codequality.md  conventions.md  deployment.md  installation.md  monitoring.md  results.md  schema.md  tests.md
k8s/: deployment.yml  pgdb-deployment.yml  pgdb-service.yml  redis-deployment.yml  redis-service.yml  siecom-service.yml
nginx/: nginx.conf
scripts/: init_db.py
siecom/: asgi.py  schema.py  urls.py  utils.py  wsgi.py
templates/: email.html  home.html
(+37 files in other folders)
